Added Backend for Contact us page and made a Success Page for message sent

--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -320,7 +320,7 @@ body::before {
     </header>
 
     <main class="main-content">
-        <form class="contact-form">
+        <form class="contact-form" method="POST" action="/contact-us">
             <h1 class="form-title">Get in Touch</h1>
             <div class="form-group">
                 <label for="name">Name</label>
@@ -336,6 +336,7 @@ body::before {
             </div>
             <button type="submit" class="submit-btn">Send Message</button>
         </form>
+        
     </main>
 </body>
 </html>
